# GPT-yourself

./: .gitignore  README.md  example_inference.py  finetuning.py  gpt.py  inference.py  parser.py  pyproject.toml  test_model.py
tests/: check_preprocessing.py  test_finetuning.py  test_system_message_filtering.py
